examples/test/testpolicy5854.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5854
  namespace: namespace309
spec:
  podSelector:
    matchLabels:
      key36: value24
      key26: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value26
          key33: value28
          key20: value44
      podSelector:
        matchLabels:
          key3: value33
          key15: value31
